# filip_opper_playground

./: README.md  pyproject.toml
scripts/: main.py
src/filip_opper_playground/: input.py  pipieline.py  reason.py  summary.py  translate.py  trigger.py
